@@ -17,6 +17,10 @@ class CallbackTest < Test::Unit::TestCase
   def test_should_not_bind_to_objects
     assert !StateMachine::Callback.bind_to_object
   end
+  
+  def test_should_not_have_a_terminator
+    assert_nil StateMachine::Callback.terminator
+  end
 end
 
 class CallbackByDefaultTest < Test::Unit::TestCase
@@ -248,6 +252,29 @@ class CallbackWithApplicationBoundObjectTest < Test::Unit::TestCase
   
   def test_should_call_method_within_the_context_of_the_object
     assert_equal @object, @callback.call(@object)
+  end
+  
+  def teardown
+    StateMachine::Callback.bind_to_object = @original_bind_to_object
+  end
+end
+
+class CallbackWithApplicationTerminatorTest < Test::Unit::TestCase
+  def setup
+    @original_terminator = StateMachine::Callback.bind_to_object
+    StateMachine::Callback.terminator = lambda {|result| result == false}
+    
+    @object = Object.new
+  end
+  
+  def test_should_not_halt_if_terminator_does_not_match
+    callback = StateMachine::Callback.new(:do => lambda {true})
+    assert_nothing_thrown { callback.call(@object) }
+  end
+  
+  def test_should_halt_if_terminator_matches
+    callback = StateMachine::Callback.new(:do => lambda {false})
+    assert_throws(:halt) { callback.call(@object) }
   end
   
   def teardown
